# s8rboyyyy

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  index.html
assets/models/: ATTRIBUTION.md  skateboard_obj_prefix_tmp.txt  skatedeck.mtl
assets/textures/: skateboard_texture.ppm  sky_hdri.ppm
scripts/: build.ps1  install_linux_deps.sh
src/: agent_orchestrator.cpp  agent_orchestrator.hpp  gameplay_state.cpp  gameplay_state.hpp  input_controller.cpp  input_controller.hpp  main.cpp  player.cpp  player.hpp  sdl_headers.hpp  tricks.cpp  tricks.hpp  world.cpp  world.hpp
